# CodeAgent

./: pyproject.toml
.tmp/: project_showcase.html
.tmp/Project/vue2-project/: package-lock.json
agent/: code_agent.py
m_mcp/: cli_tools.py  rag_tools.py
model/: model.py
prompts/: prompts.py
rag/: m_rag.py  terminal.txt
test/: mult_chat.py  mult_chat_mongo.py
tools/: cli_tools.py  file_tools.py  github_tools.py  playwright_tools.py  rag_tools.py  terminal_tools.py
