[project]
name = "code_agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-bailian20231229==2.8.2",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-mongodb>=0.3.1",
    "langgraph-checkpoint-redis>=0.4.0",
    "mcp>=1.26.0",
    "npm>=0.1.1",
    "npx>=0.1.6",
    "openai>=2.28.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
